--- a/Medium2Md.ipynb
+++ b/Medium2Md.ipynb
@@ -384,68 +384,8 @@
    "outputs": [
     {
      "data": {
-      "text/markdown": [
-       "```json\n",
-       "{ 'content': 'The current wave of AI automation largely focuses on optimizing '\n",
-       "             'existing\\n'\n",
-       "             'workflows — making them faster, more efficient, or better '\n",
-       "             'tailored to user\\n'\n",
-       "             'needs. While valuable, this approach merely scratches the '\n",
-       "             'surface of AI’s\\n'\n",
-       "             'potential. The real revolution lies in enabling AI to drive '\n",
-       "             'genuine innovation\\n'\n",
-       "             'by participating directly in the market economy.\\n'\n",
-       "             '\\n'\n",
-       "             'True innovation in a market economy means finding novel '\n",
-       "             'applications for\\n'\n",
-       "             'limited resources that create more value than they consume. For '\n",
-       "             'AI to do this,\\n'\n",
-       "             'it needs more than just the ability to analyze — it needs to '\n",
-       "             'effect change in\\n'\n",
-       "             'the world. And in our economy, that requires the ability to pay '\n",
-       "             'for resources.\\n'\n",
-       "             '\\n'\n",
-       "             'The key transformation is from AI-as-tools to AI-as-innovators. '\n",
-       "             'When we treat\\n'\n",
-       "             'AI as tools, we limit them to optimizing what exists. But '\n",
-       "             'innovators need\\n'\n",
-       "             'capital — to acquire and experiment with resources freely. By '\n",
-       "             'giving AI agents\\n'\n",
-       "             'both the ability to discover new tools at runtime and deploy '\n",
-       "             'capital to use\\n'\n",
-       "             'them, we transform them from optimization engines into genuine '\n",
-       "             'innovators.\\n'\n",
-       "             '\\n'\n",
-       "             'Consider Replit’s AI agents that can build software tools '\n",
-       "             'independently. While\\n'\n",
-       "             'powerful, they’re still limited by their inability to access '\n",
-       "             'paid services or\\n'\n",
-       "             'APIs they might need without human supervision. Imagine instead '\n",
-       "             'if these\\n'\n",
-       "             'agents could discover and integrate new APIs at runtime, pay for '\n",
-       "             'necessary\\n'\n",
-       "             'cloud resources, or even hire other AI services to solve parts '\n",
-       "             'of the problem.\\n'\n",
-       "             'That’s when we’ll see true AI-driven innovation.\\n'\n",
-       "             '\\n'\n",
-       "             'This isn’t about making existing processes better. It’s about '\n",
-       "             'enabling AI to\\n'\n",
-       "             'create things we haven’t imagined yet. By giving AI agents both '\n",
-       "             'the tools to\\n'\n",
-       "             'discover new possibilities and the capital to pursue them, we’re '\n",
-       "             'enabling them\\n'\n",
-       "             'to help create the future.\\n'\n",
-       "             '\\n',\n",
-       "  'imgs': ['https://miro.medium.com/1*nIukoXOaNmaVjaV93QTpsA.png'],\n",
-       "  'title': 'Why Give AI Agents Access to Money?',\n",
-       "  'url': 'https://medium.com/@pol.avec/why-give-ai-agents-access-to-money-be460a819a9c'}\n",
-       "```"
-      ],
       "text/plain": [
-       "{'url': 'https://medium.com/@pol.avec/why-give-ai-agents-access-to-money-be460a819a9c',\n",
-       " 'title': 'Why Give AI Agents Access to Money?',\n",
-       " 'imgs': (#1) ['https://miro.medium.com/1*nIukoXOaNmaVjaV93QTpsA.png'],\n",
-       " 'content': 'The current wave of AI automation largely focuses on optimizing existing\\nworkflows — making them faster, more efficient, or better tailored to user\\nneeds. While valuable, this approach merely scratches the surface of AI’s\\npotential. The real revolution lies in enabling AI to drive genuine innovation\\nby participating directly in the market economy.\\n\\nTrue innovation in a market economy means finding novel applications for\\nlimited resources that create more value than they consume. For AI to do this,\\nit needs more than just the ability to analyze — it needs to effect change in\\nthe world. And in our economy, that requires the ability to pay for resources.\\n\\nThe key transformation is from AI-as-tools to AI-as-innovators. When we treat\\nAI as tools, we limit them to optimizing what exists. But innovators need\\ncapital — to acquire and experiment with resources freely. By giving AI agents\\nboth the ability to discover new tools at runtime and deploy capital to use\\nthem, we transform them from optimization engines into genuine innovators.\\n\\nConsider Replit’s AI agents that can build software tools independently. While\\npowerful, they’re still limited by their inability to access paid services or\\nAPIs they might need without human supervision. Imagine instead if these\\nagents could discover and integrate new APIs at runtime, pay for necessary\\ncloud resources, or even hire other AI services to solve parts of the problem.\\nThat’s when we’ll see true AI-driven innovation.\\n\\nThis isn’t about making existing processes better. It’s about enabling AI to\\ncreate things we haven’t imagined yet. By giving AI agents both the tools to\\ndiscover new possibilities and the capital to pursue them, we’re enabling them\\nto help create the future.\\n\\n'}"
+       "'2024-06-24'"
       ]
      },
      "execution_count": 11,
@@ -454,20 +394,19 @@
     }
    ],
    "source": [
-    "from fastcore.xtras import dict2obj\n",
+    "from datetime import datetime\n",
     "\n",
-    "def parse(el):\n",
-    "    url, title = el\n",
-    "    r = httpx.get(url)\n",
-    "    soup = BeautifulSoup(r.text, 'html.parser')\n",
-    "    imgs,md = get_img_md(soup)\n",
-    "    return dict2obj(dict(url=url, title=title, imgs=imgs, content=md))\n",
-    "parse(first(arts))"
+    "def get_date(soup):\n",
+    "    date_span = soup.find('span', attrs={'data-testid': 'storyPublishDate'})\n",
+    "    if not date_span: return None\n",
+    "    # Convert \"Jun 24, 2024\" to datetime object\n",
+    "    return datetime.strptime(date_span.get_text(), '%b %d, %Y').strftime('%Y-%m-%d')\n",
+    "get_date(soup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -524,6 +463,7 @@
        "             'enabling them\\n'\n",
        "             'to help create the future.\\n'\n",
        "             '\\n',\n",
+       "  'date': '2024-10-23',\n",
        "  'imgs': ['https://miro.medium.com/1*nIukoXOaNmaVjaV93QTpsA.png'],\n",
        "  'title': 'Why Give AI Agents Access to Money?',\n",
        "  'url': 'https://medium.com/@pol.avec/why-give-ai-agents-access-to-money-be460a819a9c'}\n",
@@ -533,10 +473,101 @@
        "{'url': 'https://medium.com/@pol.avec/why-give-ai-agents-access-to-money-be460a819a9c',\n",
        " 'title': 'Why Give AI Agents Access to Money?',\n",
        " 'imgs': (#1) ['https://miro.medium.com/1*nIukoXOaNmaVjaV93QTpsA.png'],\n",
-       " 'content': 'The current wave of AI automation largely focuses on optimizing existing\\nworkflows — making them faster, more efficient, or better tailored to user\\nneeds. While valuable, this approach merely scratches the surface of AI’s\\npotential. The real revolution lies in enabling AI to drive genuine innovation\\nby participating directly in the market economy.\\n\\nTrue innovation in a market economy means finding novel applications for\\nlimited resources that create more value than they consume. For AI to do this,\\nit needs more than just the ability to analyze — it needs to effect change in\\nthe world. And in our economy, that requires the ability to pay for resources.\\n\\nThe key transformation is from AI-as-tools to AI-as-innovators. When we treat\\nAI as tools, we limit them to optimizing what exists. But innovators need\\ncapital — to acquire and experiment with resources freely. By giving AI agents\\nboth the ability to discover new tools at runtime and deploy capital to use\\nthem, we transform them from optimization engines into genuine innovators.\\n\\nConsider Replit’s AI agents that can build software tools independently. While\\npowerful, they’re still limited by their inability to access paid services or\\nAPIs they might need without human supervision. Imagine instead if these\\nagents could discover and integrate new APIs at runtime, pay for necessary\\ncloud resources, or even hire other AI services to solve parts of the problem.\\nThat’s when we’ll see true AI-driven innovation.\\n\\nThis isn’t about making existing processes better. It’s about enabling AI to\\ncreate things we haven’t imagined yet. By giving AI agents both the tools to\\ndiscover new possibilities and the capital to pursue them, we’re enabling them\\nto help create the future.\\n\\n'}"
+       " 'content': 'The current wave of AI automation largely focuses on optimizing existing\\nworkflows — making them faster, more efficient, or better tailored to user\\nneeds. While valuable, this approach merely scratches the surface of AI’s\\npotential. The real revolution lies in enabling AI to drive genuine innovation\\nby participating directly in the market economy.\\n\\nTrue innovation in a market economy means finding novel applications for\\nlimited resources that create more value than they consume. For AI to do this,\\nit needs more than just the ability to analyze — it needs to effect change in\\nthe world. And in our economy, that requires the ability to pay for resources.\\n\\nThe key transformation is from AI-as-tools to AI-as-innovators. When we treat\\nAI as tools, we limit them to optimizing what exists. But innovators need\\ncapital — to acquire and experiment with resources freely. By giving AI agents\\nboth the ability to discover new tools at runtime and deploy capital to use\\nthem, we transform them from optimization engines into genuine innovators.\\n\\nConsider Replit’s AI agents that can build software tools independently. While\\npowerful, they’re still limited by their inability to access paid services or\\nAPIs they might need without human supervision. Imagine instead if these\\nagents could discover and integrate new APIs at runtime, pay for necessary\\ncloud resources, or even hire other AI services to solve parts of the problem.\\nThat’s when we’ll see true AI-driven innovation.\\n\\nThis isn’t about making existing processes better. It’s about enabling AI to\\ncreate things we haven’t imagined yet. By giving AI agents both the tools to\\ndiscover new possibilities and the capital to pursue them, we’re enabling them\\nto help create the future.\\n\\n',\n",
+       " 'date': '2024-10-23'}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fastcore.xtras import dict2obj\n",
+    "\n",
+    "def parse(el):\n",
+    "    url, title = el\n",
+    "    r = httpx.get(url)\n",
+    "    soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "    imgs,md = get_img_md(soup)\n",
+    "    return dict2obj(dict(url=url, title=title, imgs=imgs, content=md, date=get_date(soup)))\n",
+    "parse(first(arts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```json\n",
+       "{ 'content': 'The current wave of AI automation largely focuses on optimizing '\n",
+       "             'existing\\n'\n",
+       "             'workflows — making them faster, more efficient, or better '\n",
+       "             'tailored to user\\n'\n",
+       "             'needs. While valuable, this approach merely scratches the '\n",
+       "             'surface of AI’s\\n'\n",
+       "             'potential. The real revolution lies in enabling AI to drive '\n",
+       "             'genuine innovation\\n'\n",
+       "             'by participating directly in the market economy.\\n'\n",
+       "             '\\n'\n",
+       "             'True innovation in a market economy means finding novel '\n",
+       "             'applications for\\n'\n",
+       "             'limited resources that create more value than they consume. For '\n",
+       "             'AI to do this,\\n'\n",
+       "             'it needs more than just the ability to analyze — it needs to '\n",
+       "             'effect change in\\n'\n",
+       "             'the world. And in our economy, that requires the ability to pay '\n",
+       "             'for resources.\\n'\n",
+       "             '\\n'\n",
+       "             'The key transformation is from AI-as-tools to AI-as-innovators. '\n",
+       "             'When we treat\\n'\n",
+       "             'AI as tools, we limit them to optimizing what exists. But '\n",
+       "             'innovators need\\n'\n",
+       "             'capital — to acquire and experiment with resources freely. By '\n",
+       "             'giving AI agents\\n'\n",
+       "             'both the ability to discover new tools at runtime and deploy '\n",
+       "             'capital to use\\n'\n",
+       "             'them, we transform them from optimization engines into genuine '\n",
+       "             'innovators.\\n'\n",
+       "             '\\n'\n",
+       "             'Consider Replit’s AI agents that can build software tools '\n",
+       "             'independently. While\\n'\n",
+       "             'powerful, they’re still limited by their inability to access '\n",
+       "             'paid services or\\n'\n",
+       "             'APIs they might need without human supervision. Imagine instead '\n",
+       "             'if these\\n'\n",
+       "             'agents could discover and integrate new APIs at runtime, pay for '\n",
+       "             'necessary\\n'\n",
+       "             'cloud resources, or even hire other AI services to solve parts '\n",
+       "             'of the problem.\\n'\n",
+       "             'That’s when we’ll see true AI-driven innovation.\\n'\n",
+       "             '\\n'\n",
+       "             'This isn’t about making existing processes better. It’s about '\n",
+       "             'enabling AI to\\n'\n",
+       "             'create things we haven’t imagined yet. By giving AI agents both '\n",
+       "             'the tools to\\n'\n",
+       "             'discover new possibilities and the capital to pursue them, we’re '\n",
+       "             'enabling them\\n'\n",
+       "             'to help create the future.\\n'\n",
+       "             '\\n',\n",
+       "  'date': '2024-10-23',\n",
+       "  'imgs': ['https://miro.medium.com/1*nIukoXOaNmaVjaV93QTpsA.png'],\n",
+       "  'title': 'Why Give AI Agents Access to Money?',\n",
+       "  'url': 'https://medium.com/@pol.avec/why-give-ai-agents-access-to-money-be460a819a9c'}\n",
+       "```"
+      ],
+      "text/plain": [
+       "{'url': 'https://medium.com/@pol.avec/why-give-ai-agents-access-to-money-be460a819a9c',\n",
+       " 'title': 'Why Give AI Agents Access to Money?',\n",
+       " 'imgs': (#1) ['https://miro.medium.com/1*nIukoXOaNmaVjaV93QTpsA.png'],\n",
+       " 'content': 'The current wave of AI automation largely focuses on optimizing existing\\nworkflows — making them faster, more efficient, or better tailored to user\\nneeds. While valuable, this approach merely scratches the surface of AI’s\\npotential. The real revolution lies in enabling AI to drive genuine innovation\\nby participating directly in the market economy.\\n\\nTrue innovation in a market economy means finding novel applications for\\nlimited resources that create more value than they consume. For AI to do this,\\nit needs more than just the ability to analyze — it needs to effect change in\\nthe world. And in our economy, that requires the ability to pay for resources.\\n\\nThe key transformation is from AI-as-tools to AI-as-innovators. When we treat\\nAI as tools, we limit them to optimizing what exists. But innovators need\\ncapital — to acquire and experiment with resources freely. By giving AI agents\\nboth the ability to discover new tools at runtime and deploy capital to use\\nthem, we transform them from optimization engines into genuine innovators.\\n\\nConsider Replit’s AI agents that can build software tools independently. While\\npowerful, they’re still limited by their inability to access paid services or\\nAPIs they might need without human supervision. Imagine instead if these\\nagents could discover and integrate new APIs at runtime, pay for necessary\\ncloud resources, or even hire other AI services to solve parts of the problem.\\nThat’s when we’ll see true AI-driven innovation.\\n\\nThis isn’t about making existing processes better. It’s about enabling AI to\\ncreate things we haven’t imagined yet. By giving AI agents both the tools to\\ndiscover new possibilities and the capital to pursue them, we’re enabling them\\nto help create the future.\\n\\n',\n",
+       " 'date': '2024-10-23'}"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,9 +598,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1*nIukoXOaNmaVjaV93QTpsA.png'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def download_image(url, save_dir):\n",
     "    \"\"\"Download image and return local path\"\"\"\n",
@@ -587,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +638,7 @@
        "(#1) ['images/1*nIukoXOaNmaVjaV93QTpsA.png']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,12 +669,13 @@
     "    \n",
     "    # Create markdown with frontmatter\n",
     "    md = f\"\"\"---\n",
-    "title: {post.title}\n",
+    "title: \"{post.title}\"\n",
     "original: {post.url}\n",
+    "date: {post.date}\n",
     "images:\n",
     "{'\\n'.join(f'- {img}' for img in img_paths)}\n",
     "---\n",
-    "\n",
+    "# {post.title}\n",
     "{content}\n",
     "\"\"\"\n",
     "    # Save markdown file\n",
@@ -644,7 +687,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
